# persian-tools-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  rustfmt.toml
.github/workflows/: linting.yml  test.yml
src/: lib.rs
src/banking/: bank_codes_table.rs  card_number_extractor.rs  mod.rs  sheba.rs  sheba_table.rs
src/banking/card/: bank_codes_table.rs  mod.rs
src/banking/sheba/: mod.rs  sheba_table.rs
src/card_number/: mod.rs
src/convert/: mod.rs
src/date/: converter.rs  mod.rs
src/digit/: mod.rs  word_to_number.rs
src/national_code/: mod.rs
src/number_suffix/: mod.rs
src/persian_content/: mod.rs
src/phone_number/: landline.rs  mobile.rs  mod.rs
src/province/: city.rs  mod.rs
src/sheba/: banks.rs  mod.rs
src/translate/: mod.rs
src/utils/: fixed_map.rs  mod.rs
