[package]
name = "persian-tools"
version = "0.1.0"
authors = ["rustland-fa developers"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustland-fa/persian-tools-rs"
description = """
A set of tools and helpers related to Persian language or in general, Iran!
"""
keywords = ["persian", "tool", "format", "tools", "iran"]
categories = ["algorithms", "date-and-time", "encoding", "internationalization", "localization"]
include = ["src/", "*.md"]

[features]
default = ["translate"]
translate = ["dep:reqwest"]

[dependencies]
lazy_static = "1.4"
regex = "1.10"
strum = { version = "0.25", features = ["derive"] }
num-traits = "0.2"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
# persian-tools = { path = "." }

