[package]
name = "persian-tools"
version = "0.1.0"
authors = ["rustland-fa developers"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustland-fa/persian-tools-rs"
description = """
A set of tools and helpers related to Persian language or in general, Iran!
"""
keywords = ["persian", "tool", "format", "tools", "iran"]
categories = ["algorithms", "date-and-time", "encoding", "internationalization", "localization"]
include = ["src/", "*.md"]

[features]
default = ["translate", "regex"]
regex = ["lazy-regex/regex"]
regex_lite = ["lazy-regex/lite"]
translate = ["dep:reqwest"]

[dependencies]
lazy-regex = { version = "3.1", default-features = false }
strum = { version = "0.25", features = ["derive"] }
num-traits = "0.2"
reqwest = { version = "0.11", features = ["blocking"], optional = true }

